@@ -97,7 +97,7 @@ public final class WynntilsGuidesListScreen extends WynntilsListScreen<Screen, G
         }
 
         ArrayList<String> names = new ArrayList<>(Arrays.asList(clipboard.split(",")));
-        names.remove(0); // Remove the "wynntilsFavorites," part
+        names.removeFirst(); // Remove the "wynntilsFavorites," part
         names.forEach(name -> {
             if (name.isBlank() || name.isEmpty()) return;
             Services.Favorites.addFavorite(name);
